# SF-F5

./: .gitignore  00 - DOCTRINA.md  _FRAMEWORK_MVP_DoD.md  claude_canon.sh  claude_redesign.sh  factory.config.yaml  pyproject.toml
_arhiva/: resume-state-10-06-2026.md  session-handoff-11-06-2026.md
deploy/: sf-architect-resume.service  sf-architect-resume.sh  sf-architect-resume.timer  sf-cap.sh  sf-dash-limits-poller.service  sf-dash-limits-poller.sh  sf-dash-limits-poller.timer  sf-factory-watchdog.service  sf-factory-watchdog.timer
docs/: brief-fondator-20-06-2026.md  canon-architect-operations-RO.md  decision-log.md  decision-request-kickoff-10-06-2026.md  design-configurare-dashboard-20-06-2026.md  design-robustness-antistall-14-06-2026.md  design-slice2-noaction-disposition.md  environment-audit-10-06-2026.md  factory-management-inventory-19-06-2026.md  incident-cadere-arhitecti-0425-21-06-2026.md  intake-agenda-12-06-2026.md  session-handoff-12-06-2026.md  session-handoff-ARH-01-22-06-2026.md  session-handoff-ARH-02-22-06-2026.md  session-handoff-ARH-03-22-06-2026.md  session-handoff-ARH-04-23-06-2026.md  session-handoff-ARH-05-23-06-2026.md  session-handoff-ARH-06-23-06-2026.md  session-handoff-ARH-07-25-06-2026.md  session-handoff-ARH-08-25-06-2026.md  session-handoff-ARH-09-26-06-2026.md  session-handoff-ARH-10-26-06-2026.md  session-handoff-ARH-11-27-06-2026.md  session-handoff-ETAPA-5a-13-06-2026.md  session-handoff-ETAPA-5b-14-06-2026.md  session-handoff-ETAPA-5c-14-06-2026.md  session-handoff-ETAPA-5d-14-06-2026.md  session-handoff-ETAPA-5e-15-06-2026.md  (+22 more)
(+146 files in other folders)
