[project]
name = "sf-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "crxh22", email = "214634318+crxh22@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
sf-factory = "sf_factory:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
