[project]
name = "sf-factory"
version = "0.1.0"
description = "SF-F5 factory control plane: deterministic orchestrator with enumerated LLM consultation points"
readme = "README.md"
authors = [
    { name = "crxh22", email = "214634318+crxh22@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
# Operator entry point (design §4 cli.main, built in wave 3).
sf-factory = "sf_factory.cli:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
